--- a/index.html
+++ b/index.html
@@ -272,12 +272,11 @@
     <section id="footer" class="gradient-background">
       <div class="container">
         <footer
-          class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 border-top"
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top"
         >
           <div class="col mb-3">
             <p class="text-body-secondary">TinDog© 2024</p>
           </div>
-
           <div class="col mb-3"></div>
 
           <div class="col mb-3">
